  on line 435.
- ALL: PHP Warning: count(): Parameter must be an array or an object that
  implements Countable in Shop/InvoiceStatusForm.php on line 670.
  You will notice this error when turning a concept into a definitive invoice
  and then visiting the order page. The Acumulus tab or box  will show an error
  message instead of the details of the definitive invoice.

Features:
- ALL: Allow also warnings when checking requirements.

7.2.2 (2022-05-13) (OC, PS only)
--------------------------------
Features:
- PS, OC: Added crash reporting (explained in the notes for 7.1.0).


7.2.1 (2022-05-12) (MA, WC only)
--------------------------------
Bugs:
- MA: Magento coding standards: The use of function assert() is forbidden.
- WC: PHP Fatal error: Uncaught Error: Class 'Siel\\Acumulus\\Invoice\\Source'
  not found in acumulus.php:788.

7.2.0 (2022-05-10)
------------------
Features:
- ALL: The API web server will no longer send e-mails on errors or warnings. The
  error handling of this plugin is robust enough to catch and communicate all
  errors and warnings issued by the API web server. So we do not any longer send
  the e-mail address as provided by you to the server. The plugin will continue
  to use it to send e-mails from your web shop to you.
- ALL: Added support for the 'invoicetype' parameter (reminder or normal
  invoice) in the Acumulus::getInvoicePdfUri() method.
  NOTE for developers: this makes this call backwards incompatible if you did
  call it with the $applyGraphics parameter set!
- WC, MA: Added crash reporting (explained in the notes for 7.1.0).

Bugs:
- Text unknown severity in Log for success messages.
- CRITICAL Uncaught Error: Call to a member function toLogMessages() on null in
  InvoiceAddResult.php:294.

7.1.1 (2022-05-03) (JOO only)
-----------------------------
Bugs:
- Error checking on forms was not yet adapted to new way of error reporting from
  the communication layer. Impossible to enter account details on the config
  form.